# pressure_bot

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bot/: main.py
src/bot/service_layer/: __init__.py  services.py
src/bot/tests/: test_process.py  test_services.py
